# configs

./: .gitconfig  .zshrc  CLAUDE.md  Keymap-V1  Keymap-V1.json  Treesitter_install.py  clipboard_copy.py  clone_nvim_extensions.py  convert_to_unix.py  iterm2.plist  lazy-lock.json  move_configs.py  pyproject.toml  setup.sh  windows_settings.json  zshrc
code/: keybindings.json  settings.json  snippets.json
code/mac/: keybindings.json  settings.json  snippets.json
code/windows/: keybindings.json
custom/: init.lua
dotfiles/: .bashrc  .vimrc  .zshrc  bashrc  zshrc
keyboard_maps/: Keymap-P1.json  Keymap-V1.json
lua/: chadrc.lua
lua/configs/: lspconfig.lua
lua/custom/: mappings.lua
lua/plugins/: init.lua
nvim/: chadrc.lua  init.lua  lazy-lock.json  mappings.lua  options.lua
nvim/configs/: cmp.lua  lspconfig.lua  treesitter.lua
nvim/lua/: chadrc.lua  lazygit.lua  mappings.lua  options.lua  splitterm.lua  ui.lua
nvim/lua/configs/: alpha.lua  auto-session.lua  cmp.lua  code-companion.lua  csvview.lua  dap-virtual-text.lua  dap.lua  diffview.lua  fzf.lua  gitsigns.lua  gitsigns_helpers.lua  harpoon.lua  lazy.lua  lspconfig.lua  lualine.lua  luasnip.lua  nvimtree.lua  slime.lua  tabby.lua  tabout.lua  telescope.lua  toggleterm.lua  treesitter.lua  treesitter_parsers.lua
nvim/lua/overwrite/: dap_repl.lua
nvim/lua/plugins/: init.lua
nvim/lua/snippets/: package.json  python.json
nvim/plugins/: init.lua
nvim/queries/markdown/: injections.scm
nvim/snippets/: package.json
skills/clarify/: SKILL.md
tmux/: tmux.conf
